# MIMIC-TriggerBench

./: .env.example  .gitignore  IMPLEMENTATION_TASKS.md  PAPER_TASKS.md  README.md  pyproject.toml
.cursor/commands/: check-implement.md
.cursor/rules/: 00-meta-self-improve.mdc  10-project-invariants.mdc  20-data-label-integrity.mdc  30-replay-and-tool-contract.mdc  40-baselines-before-agent.mdc  50-paper-claim-discipline.mdc
docs/: CURSOR_EXECUTION_ORDER.md  PROJECT_GROUND_TRUTH.md  data_inventory.md  data_inventory_generated.md  normalization_coverage_generated.md
scripts/: download-mimiciv-parallel-ps5.ps1
src/mimic_triggerbench/: __init__.py  __main__.py  cli.py  mimic_tables.py  splitting.py
src/mimic_triggerbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mimic_triggerbench/baselines/: __init__.py  feature_builder.py  hf_local_llm.py  llm_baseline.py  rag_baseline.py  rule_baseline.py  tabular_baseline.py
src/mimic_triggerbench/config/: __init__.py  load.py  settings.py
src/mimic_triggerbench/data_access/: __init__.py  codebook_loader.py  codebook_models.py  inventory.py  (+5 more)
tests/: test_feasibility.py  test_mapping_ledger.py  test_normalization.py  test_normalization_audit_integration.py  test_phase_0_4_realdata.py  test_phase_0_6_realdata.py  test_phase_0_7_realdata.py  test_phase_0_8_realdata.py  test_phase_5_episodes.py  test_phase_6_5_schemas.py  test_phase_6_splitting.py  test_phase_7_replay.py  test_phase_8_baselines.py  test_plan_compliance.py  test_skeleton.py  test_task_specs.py  test_timeline.py
(+32 files in other folders)
